--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,13 +17,17 @@ message("--------------------------------------------------")
 set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 
 
-#aux_source_directory(src SRC_LIST) 
-#aux_source_directory(src SRC_LIST) 和 set(SRC_LIST ./src/opencv_test.cpp) 功能一致
-set(SRC_LIST ./src/read_pic.cpp)
+# aux_source_directory(src DIR_SRC) 
 
-add_executable(read_pic ${SRC_LIST} ) 
-target_link_libraries(read_pic ${OpenCV_LIBS})
+# add_executable(bin_file_name ${DIR_SRC} ) 
+# target_link_libraries(bin_file_name ${OpenCV_LIBS})
 
+
+add_executable(test_read_pic src/test_read_pic.cpp ) 
+target_link_libraries(test_read_pic ${OpenCV_LIBS})
+
+add_executable(test_open_camera src/test_open_camera.cpp ) 
+target_link_libraries(test_open_camera ${OpenCV_LIBS})
 
 
 # ref: [cmake怎么优雅简洁的编译c++工程](https://zhuanlan.zhihu.com/p/352848909)
